@@ -15,9 +15,6 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 
-# Please email any bugs, comments, and/or additions to this file to:
-# bug-gdb@prep.ai.mit.edu
-
 # written by Elena Zannoni (elz@apollo.hp.com)
 #
 # This file is part of the gdb testsuite
@@ -68,6 +65,9 @@ if ![runto_main] then {
 
 get_debug_format
 
+# Many tests xfail with gcc 2 -gstabs+.
+# TODO: check out the hp side of this.
+
 proc local_compiler_xfail_check { } {
     if { [test_compiler_info gcc-2-*] } then {
 	if { ![test_debug_format "HP"] \
@@ -79,6 +79,16 @@ proc local_compiler_xfail_check { } {
     global hp_cc_compiler
     if { $hp_cc_compiler } {
 	setup_xfail "hppa*-*-hpux*"
+    }
+}
+
+# A few tests still xfail with gcc 3 -gstabs+ and gcc 4 -gstabs+.
+
+proc local_compiler_xfail_check_2 { } {
+    if { [test_compiler_info gcc-3-*] || [test_compiler_info gcc-4-*] } {
+	if { [test_debug_format "stabs" ] } {
+	    setup_xfail "*-*-*"
+	}
     }
 }
 
@@ -118,10 +128,8 @@ send_gdb "break marker1\n" ; gdb_expect -re ".*$gdb_prompt $"
 # test function parameters
 
 local_compiler_xfail_check
-if { [test_compiler_info gcc-3-*] && [test_debug_format "stabs"] } then {
-    # With stabs, even GCC 3 does not get the const char arguments correct.
-    setup_xfail "*-*-*"
-}
+local_compiler_xfail_check_2
+
 send_gdb "ptype qux1\n"
 gdb_expect {
     -re "type = int \\(const char, const char, const char \\*, char \\* const\\).*$gdb_prompt $" {
@@ -273,11 +281,7 @@ proc do_constvar_tests {} {
     gdb_test "ptype locust" "type = double \\* const"
 
     local_compiler_xfail_check
-    if { [test_compiler_info gcc-3-*] && [test_debug_format "stabs"] } then {
-	# With stabs, even GCC 3 does not get the constant structure member
-	# correct.
-	setup_xfail "*-*-*"
-    }
+    local_compiler_xfail_check_2
     gdb_test "ptype crass" "type = struct crass \{\[\r\n\]+\[\ \t\]+char \\* const ptr;\[\r\n\]+\}"
     local_compiler_xfail_check
     gdb_test "ptype crisp" "type = struct crisp \{\[\r\n\]+\[\ \t\]+char \\* const \\*ptr;\[\r\n\]+\}"
